# src/payments/dto/create-guest-intent.dto.ts
@@ -1,0 +1,9 @@
+import { IsEmail, IsUUID } from 'class-validator';
+
+export class CreateGuestIntentDto {
+  @IsUUID()
+  orderId: string;
+
+  @IsEmail()
+  email: string;
+}
